CIV-9414 removed unused variables